css/styles.scss
/* ... */
/* post-footer back btn */

.back-btn {
  margin: 80px auto;
  text-align: center;
}
.back-btn a {
  padding: 20px 80px;
  display: inline-block;
  border: 1px solid $btn-border-color;
  border-radius: 3px;
  font-size: 16px;
  color: $text-color;
}
.back-btn a:hover {
  background-color: $btn-default-active-bg-color;
  border-color: $btn-border-color;
}

/* blog ends */

/* about */

.post .intro-title {
  margin-top: 20px;
  padding-bottom: 12px;
  color: $grey-text-color;
  font-size: 38px;
  border-bottom: 1px solid $divider-color;
}
.about p a,
.about ol a,
.about ul a {
  padding-right: 2px;
}
.author {
  overflow: auto;
  padding: 30px 0;
  border-bottom: 1px solid $divider-color;
}
.author-title {
  margin-top: 100px;
}
.author-info {
  margin-top: 3px;
  margin-left: 20%;
}
.member-info {
}
.sns a {
  margin: -5px 2px 0 0;
  vertical-align: middle;
}
.nick-name {
  margin-right: 10px;
  font-weight: bold;
  font-size: 16px;
}
.nick-name a {
  color: $text-color;
}
.author img {
  width: 14%;
  padding: 0;
  border-radius: 50%;
  float: left;
}
.twitter-icon {
  display: inline-block;
  background-image: url(/images/twitter-icon.png);
  background-size: 24px 24px;
  width: 24px;
  height: 24px;
}
.facebook-icon {
  display: inline-block;
  background-image: url(/images/facebook-icon.png);
  background-size: 24px 24px;
  width: 24px;
  height: 24px;
}
.tumblr-icon {
  display: inline-block;
  background-image: url(/images/tumblr-icon.png);
  background-size: 24px 24px;
  width: 24px;
  height: 24px;
}
.dribbble-icon {
  display: inline-block;
  background-image: url(/images/dribbble-icon.png);
  background-size: 24px 24px;
  width: 24px;
  height: 24px;
}
.linkdin-icon {
  display: inline-block;
  background-image: url(/images/linkdin-icon.png);
  background-size: 24px 24px;
  width: 24px;
  height: 24px;
}
.wordpress-icon {
  display: inline-block;
  background-image: url(/images/wordpress-icon.png);
  background-size: 24px 24px;
  width: 24px;
  height: 24px;
}
.homepage-icon {
  display: inline-block;
  background-image: url(/images/homepage-icon.png);
  background-size: 24px 24px;
  width: 24px;
  height: 24px;
}

/* footer */

.footer {
  margin-bottom: 20px;
  font-size: 14px;
  color: $grey-text-color;
}
.footer a {
  color: $grey-text-color;
}
.footer a:hover {
  text-decoration: underline;
}
/* hiring banner */

.hiring-banner {
  margin-left: auto;
  margin-right: auto;
  padding: 0 5%;
  height: 430px;
  background-size: cover;
  background-repeat: no-repeat;
  background-image: url(/images/hiring-imagex1.jpg);
  background-color: #fff;
  background-position: left bottom;
  -webkit-transition: 0.2s ease-out all;
}
.lt-ie9 .hiring-banner {
  background-image: url(/images/hiring-imagex1.jpg) no-repeat;
  background-position: left bottom;
}
.hiring-content {
  margin: 0 auto;
  padding-top: 80px;
  margin-left: 562px;
  max-width: 700px;
}
.hiring-title {
  margin-bottom: 20px;
  font-size: 48px;
  font-weight: 100;
  line-height: 1.1em;
  color: $text-color;
  -webkit-transition: 0.2s ease-out all;
}
.hiring-subtitle {
  color: $text-color;
  font-size: 18px;
  font-weight: normal;
  -webkit-transition: 0.2s ease-out all;
  line-height: 1.5em;
}
.btn-job {
  margin-top: 34px;
  padding: 14px 8%;
  display: inline-block;
  border: 1px solid $mainblue-0;
  border-radius: 2px;
  color: $mainblue-0;
  background-color: rgba(255, 255, 255, 0.7);
  font-size: 16px;
  -webkit-transition: 0.2s ease-out all;
}
.btn-job:hover {
  color: $mainblue-0;
  background-color: transparent;
  border: 1px solid $mainblue-0;
  background-color: rgba(76, 128, 241, 0.1);
}

/* responsive */
@media only screen and (max-width: 650px) {
  body {
    width: 100%;
  }
  .pagination .pages li {
    display: none;
  }
  .pagination .previous {
    float: left;
  }
  .pagination .next {
    float: right;
  }
}

@media only screen and (max-width: 580px) {
  body {
    width: 100%;
  }
  .header {
    height: 60px;
  }
  .toggle {
    display: block;
    position: relative;
    cursor: pointer;
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    user-select: none;
  }
  #toggle:checked ~ .menu {
    display: block;
    opacity: 1;
  }
  .menu {
    display: none;
    opacity: 0;
    margin: 10px 5% 0;
    width: 90%;
    position: absolute;
    right: 0;
    background: rgba(255, 255, 255, 0.9);
    border-radius: 2px;
    text-align: center;
  }
  .menu li {
    display: block;
  }
  .menu li a {
    padding: 15px 0;
    width: 100%;
  }
  .hiring-banner {
    height: 400px;
    background-position: 70% left;
  }
  .hiring-content {
    padding-top: 60px;
    text-align: center;
    margin-left: 0px;
  }
  .hiring-title {
    font-size: 42px;
  }
  .hiring-subtitle br{
    display: none;
  }
  .btn-job {
    width: 70%;
  }
  .post-author-info .portrait {
    width: 40%;
  }
  .posts .portrait {
    display: none;
  }
  .posts li {
    padding: 15% 0;
  }
  .post-title {
    margin-right: 0;
  }
  .pagination .pages li {
    display: none;
  }
  .post-description {
    margin-right: 0;
  }
  .back-btn a {
    padding: 20px 25%;
  }
}

@media only screen and (max-width: 360px) {
  body {
    width: 100%;
  }
  .hiring-banner {
    height: 380px;
  }
  .hiring-content {
    padding-top: 60px;
    margin-left: 0px;
  }
  .hiring-title {
    font-size: 36px;
  }
  .btn-job {
    margin-top: 20px;
  }
}

/* for IE8 and lower */
.res-mobile {
  .header {
    height: 80px;
  }
  .menu {
    float: left;
    padding: 8px 0;
  }
  .menu li a {
    padding-left: 0;
    padding-right: 20px;
  }
  .post-title {
    margin-right: 0;
  }
  .pagination .pages li {
    display: none;
  }
  .post-description {
    margin-right: 0;
  }
  .back-btn a {
    padding: 20px 25%;
  }
  .spoqa-logo-wrap {
      float:none;
  }
  .pagination .previous {
    float: left;
  }
  .pagination .next {
    float: right;
  }
}

/* fb comment plug-in overrides */
.fb-comments > span {
  padding-top: 30px;
}

